--- a/estilos.css
+++ b/estilos.css
@@ -1,9 +1,14 @@
 body {
-    background-color: aqua;
+    
 }
 
 img {
     width: 100%;
+}
+
+.principal {
+    background: #CCCCCC;
+    padding: 30px;
 }
 
 h1 {
@@ -21,3 +26,30 @@ em strong {
 #missao {
     font-size: 20px;
 }
+
+.beneficios {
+    background: #FFFFFF;
+    padding: 20px;
+}
+
+h2 {
+    text-align: center;
+}
+
+ul {
+    display: inline-block;
+    vertical-align: top;
+    width: 20%;
+    margin-right: 15%;
+}
+
+.itens {
+    font-style: italic;
+}
+
+.imagembeneficios {
+    width: 50%;
+}
+
+
+
